orthanc-postgresql/orthanc-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: orthanc-db
  name: orthanc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orthanc-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/orthanc-postgresql-default: "true"
        io.kompose.service: orthanc-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: orthanc
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:bullseye
          name: orthanc-db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: orthanc-db
      restartPolicy: Always
      volumes:
        - name: orthanc-db
          persistentVolumeClaim:
            claimName: orthanc-db
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: orthanc-db
  name: orthanc-db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: orthanc-db
status:
  loadBalancer: {}
