orthanc-postgresql/orthanc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: orthanc
  name: orthanc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orthanc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/orthanc-postgresql-default: "true"
        io.kompose.service: orthanc
    spec:
      containers:
        - image: jodogne/orthanc-plugins:1.10.1
          name: orthanc
          ports:
            - containerPort: 4242
            - containerPort: 8042
          resources: {}
          volumeMounts:
            - name: "orthanc-config"
              mountPath: "/etc/orthanc/orthanc.json"
              subPath: orthanc.json
              readOnly: true
            - mountPath: /var/lib/orthanc/db
              name: orthanc-storage
      volumes:
        - name: "orthanc-config"
          configMap:
            name: "orthanc-config"
        - name: orthanc-storage
          persistentVolumeClaim:
            claimName: orthanc-storage
      restartPolicy: Always
status: {}


---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: orthanc
  name: orthanc
spec:
  type: NodePort
  ports:
    - name: dicom
      port: 4242
      targetPort: 4242
    - name: http
      protocol: TCP
      port: 8042
      nodePort: 30042
  selector:
    io.kompose.service: orthanc
status:
  loadBalancer: {}
